tests/errors/test_34.x
// Unknown array size at compile time

let x: int[];

fn main() -> int {}